--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ionic/react": "^6.2.4",
     "@ionic/react-router": "^6.2.4",
     "animate.css": "^4.1.1",
+    "cordova-plugin-ionic": "5.5.3",
     "ionicons": "^5.4.0",
     "pullstate": "^1.24.0",
     "react": "^18.2.0",
